# TinkerThinker

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  API.md  CHANGELOG.md  CMakeLists.txt  README.de.md  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.esp32dev
.github/: FUNDING.yml
.venv_ws/: pyvenv.cfg
CAD/: PlatinenhalterNEU v6.f3d  README.md
PCB/: README.md
autoFlasher/: blacklist.txt  flash.py  flash.spec  partitions_dual3mb_1m5spiffs.csv
data/: config.css  config.html  config.js  config.json  controls.html  controls.js  index.html  script.js  setup.css  setup.html  setup.js  styles.css
examples/: README.MD  RescueBotCAD.f3d
main/: BatteryMonitor.cpp  BatteryMonitor.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DFRobotDFPlayerMini.cpp  InputBindingManager.cpp  InputBindingManager.h  LEDController.cpp  LEDController.h  MotorController.cpp  MotorController.h  ServoController.cpp  ServoController.h  SystemMonitor.cpp  SystemMonitor.h  TinkerThinkerBoard.cpp  TinkerThinkerBoard.h  WebServerManager.cpp  WebServerManager.h  main.c  sketch.cpp  sketchOLD.cpp
patches/: 0001-Call-initBluepad32-when-AUTOSTART_ARDUINO-is-enabled.patch
src/: BatteryMonitor.cpp  ConfigManager.cpp  ConfigManager.h  LEDController.cpp  LEDController.h  MotorController.cpp  MotorController.h  MyCustomBoard.cpp  MyCustomBoard.h  ServoController.cpp  ServoController.h  SystemMonitor.cpp  SystemMonitor.h  TinkerThinkerBoard.cpp  TinkerThinkerBoard.h  WebServerManager.cpp  WebServerManager.h  main.cpp
tools/: auto_flasher.py  blacklist.txt  build_webserial_release_bundle.bat  build_webserial_release_bundle.ps1  build_webserial_release_bundle.sh  partitions_dual3mb_1m5spiffs.csv  requirements.txt  start_flasher.bat  webserial_installer.html  (+1 more)
(+344 files in other folders)
